--- a/.editorconfig
+++ b/.editorconfig
@@ -29,7 +29,7 @@ dotnet_style_readonly_field = false
 csharp_style_prefer_extended_property_pattern = true:suggestion
 csharp_prefer_static_local_function = true:suggestion
 csharp_style_throw_expression = true:suggestion
-csharp_prefer_simple_default_expression = true:suggestion
+csharp_prefer_simple_default_expression = true:silent
 csharp_style_prefer_local_over_anonymous_function = true:suggestion
 csharp_style_implicit_object_creation_when_type_is_apparent = false:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
