--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,11 @@
-# 競プロ専用！
+# これより上の EditorConfig を適用しない
+root = true
+
+[*]
+charset = utf-8
+
 
 [*.{cs,csx}]
-
 # メンバー アクセスを簡略化する
 dotnet_diagnostic.IDE0002.severity = none
 # 使用されていない非公開メンバーを削除する
@@ -12,50 +16,126 @@ dotnet_diagnostic.IDE0052.severity = silent
 dotnet_diagnostic.IDE2003.severity = none
 # 名前付けルール違反
 dotnet_diagnostic.IDE1006.severity = none
+# 使用しない using
+dotnet_diagnostic.IDE0005.severity = none
+dotnet_diagnostic.CS8019.severity = none
+# 名前空間で型を宣言
+dotnet_diagnostic.CA1050.severity = none
 
-csharp_style_conditional_delegate_call = true:suggestion
-csharp_prefer_braces = when_multiline:suggestion
-csharp_style_prefer_method_group_conversion = true:suggestion
-csharp_indent_labels = one_less_than_current
+charset = utf-8
+indent_style = space
+tab_width = 2
+indent_size = 2
+
+# namespace Sample;
+# namespace Sample { }
+csharp_style_namespace_declarations = file_scoped:warning
+
+# }
+# [EOF]
 insert_final_newline = true
-csharp_new_line_before_open_brace = false
-csharp_new_line_before_else = false
-csharp_new_line_before_catch = false
-csharp_new_line_before_finally = false
+
+# > < <= >= is as == !=
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:suggestion
+
+# && || ??
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:suggestion
+
+# A();
+#
+#
+# B();
+dotnet_style_allow_multiple_blank_lines_experimental = false:silent
+
+# if (...) {
+# } else
+#
+# if (...)
+# {
+# }
+# else
+csharp_new_line_before_open_brace = none
 csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_members_in_anonymous_types = false
 csharp_new_line_between_query_expression_clauses = false
-dotnet_style_readonly_field = false
-csharp_style_prefer_extended_property_pattern = true:suggestion
-csharp_prefer_static_local_function = true:suggestion
-csharp_style_throw_expression = true:suggestion
-csharp_prefer_simple_default_expression = true:silent
-csharp_style_prefer_local_over_anonymous_function = true:suggestion
-csharp_style_implicit_object_creation_when_type_is_apparent = false:suggestion
-csharp_style_inlined_variable_declaration = true:suggestion
-csharp_style_unused_value_assignment_preference = discard_variable:suggestion
-csharp_style_allow_embedded_statements_on_same_line_experimental = false:silent
-csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false:suggestion
-csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = false:warning
+csharp_new_line_before_catch = false
+csharp_new_line_before_else = false
+csharp_new_line_before_finally = false
+csharp_new_line_before_while = false
 
-dotnet_style_qualification_for_field = false:silent
-dotnet_style_qualification_for_property = false:silent
-dotnet_style_qualification_for_method = true:suggestion
-dotnet_style_qualification_for_event = true:suggestion
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:suggestion
+# case 0:
+#     case 0:
+csharp_indent_switch_labels = true
+
+# case 0:
+# {
+# case 0:
+#     {
+csharp_indent_case_contents_when_block = false
+
+
+[*.{csproj,fsproj}]
+charset = utf-8
+indent_size = 2
+
+
+[*.{fs,fsx}]
+fsharp_max_if_then_else_short_width=50
+fsharp_max_record_width=60
+fsharp_max_array_or_list_width=60
+fsharp_max_value_binding_width=50
+fsharp_max_function_binding_width=50
+fsharp_keep_if_then_in_same_line=true
+fsharp_blank_lines_around_nested_multiline_expressions=false
+fsharp_bar_before_discriminated_union_declaration=true
+fsharp_keep_indent_in_branch=true
+
+
+[*.{c,cpp}]
+charset = utf-8
 tab_width = 2
 indent_size = 2
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
-dotnet_code_quality_unused_parameters = non_public:silent
-end_of_line = crlf
-dotnet_style_require_accessibility_modifiers = omit_if_default:suggestion
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
-dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
-dotnet_style_explicit_tuple_names = true:suggestion
-dotnet_style_prefer_conditional_expression_over_return = true:suggestion
-dotnet_style_prefer_compound_assignment = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_simplified_interpolation = true:suggestion
+
+# }
+# [EOF]
+insert_final_newline = true
+
+# case 0:
+#     case 0:
+cpp_indent_case_labels = true
+
+# case 0:
+# {
+# case 0:
+#     {
+cpp_indent_case_contents_when_block = false
+
+# if (...) {
+#
+# if (...)
+# {
+cpp_new_line_before_open_brace_namespace = same_line
+cpp_new_line_before_open_brace_type = same_line
+cpp_new_line_before_open_brace_function = same_line
+cpp_new_line_before_open_brace_block = same_line
+cpp_new_line_before_open_brace_lambda = same_line
+cpp_new_line_scope_braces_on_separate_lines = false
+
+# int main() { }
+#
+# int main() {
+# }
+cpp_new_line_close_brace_same_line_empty_type = false
+cpp_new_line_close_brace_same_line_empty_function = false
+
+# } else
+#
+# }
+# else
+cpp_new_line_before_catch = false
+cpp_new_line_before_else = false
+cpp_new_line_before_while_in_do_while = false
+
+# a++; b++;
+# a++;b++;
+cpp_space_after_semicolon = true
