--- a/snippets.jsonc
+++ b/snippets.jsonc
@@ -10,21 +10,6 @@
       ".Select(${1:int.Parse})${0:\n.ToArray()}"
     ]
   },
-  "Console Read Matrix": {
-    "prefix": "cr-matrix",
-    "body": [
-      "var ${1:matrix} = new ${2:int}[${3:h}][];",
-      "for (int i = 0; i < ${3:h}; i++)",
-      "  ${1:matrix}[i] = ",
-      "    Console.ReadLine().Split()${4:",
-      "    .Select(${2:int}.Parse)",
-      "    .ToArray()};\n"
-    ]
-  },
-  "Array Separation": {
-    "prefix": "var-sep",
-    "body": "var ${1:n} = ${2:arr}[${0:0}];"
-  },
   "Console WriteLine (No Sys)": {
     "prefix": "cw",
     "body": "Console.WriteLine($0)"
@@ -33,15 +18,21 @@
     "prefix": "ew",
     "body": "Console.Error.WriteLine($0)"
   },
+  "Array Separation": {
+    "prefix": "var-sep",
+    "body": "var ${1:n} = ${2:arr}[${0:0}];"
+  },
   "For (No Braces)": {
     "prefix": "for",
-    "body": "for (${2:int ${1:i} = 0}; ${3:${1:i} < x}; ${4:${1:i}++}) $0"
+    "body": "for (${2:int ${1:i} = 0}; ${3:${1:i} < n}; ${4:${1:i}++}) $0"
   },
   "For2": {
     "prefix": "for2",
     "body": [
-      "for (${2:int ${1:i} = 0}; ${3:${1:i} < x}; ${4:${1:i}++})\n{",
-      "  for (${6:int ${5:j} = 0}; ${7:${5:j} < y}; ${8:${5:j}++}) $0\n}"
+      "for (${2:int ${1:i} = 0}; ${3:${1:i} < x}; ${4:${1:i}++})",
+      "{",
+      "    for (${6:int ${5:j} = 0}; ${7:${5:j} < y}; ${8:${5:j}++}) $0",
+      "}"
     ]
   },
   "For3": {
@@ -49,10 +40,10 @@
     "body": [
       "for (${2:int ${1:i} = 0}; ${3:${1:i} < x}; ${4:${1:i}++})",
       "{",
-      "  for (${6:int ${5:j} = 0}; ${7:${5:j} < y}; ${8:${5:j}++})",
-      "  {",
-      "    for (${10:int ${9:k} = 0}; ${11:${9:k} < z}; ${12:${9:k}++}) $0",
-      "  }",
+      "    for (${6:int ${5:j} = 0}; ${7:${5:j} < y}; ${8:${5:j}++})",
+      "    {",
+      "        for (${10:int ${9:k} = 0}; ${11:${9:k} < z}; ${12:${9:k}++}) $0",
+      "    }",
       "}"
     ]
   },
@@ -64,16 +55,31 @@
     "prefix": "foreach",
     "body": "foreach (var ${1:item} in ${2:collection}) $0"
   },
-  "Lib": {
-    "prefix": "comment-lib",
-    "body": [
-      "// ---------- Lib --------------",
-      "\n$0",
-      "// ---------- End Lib ----------"
-    ]
+  "If DEBUG": {
+    "prefix": "if(debug)",
+    "body": "if (DEBUG) $0"
   },
-  "Line": {
-    "prefix": "comment-line",
-    "body": "// -----------------------------"
+  "NotImpl": {
+    "prefix": "notimpl",
+    "body": "throw new NotImplementedException()"
+  },
+  "尺取り法": {
+    "prefix": "syakutori",
+    "body": [
+      "int ${1:l} = 0, ${2:r} = 0;",
+      "while (${1:l} < ${3:n})",
+      "{",
+      "    if (${2:r} < ${3:n} && ${4:still})",
+      "    {",
+      "        $0",
+      "        ${2:r}++;",
+      "    }",
+      "    else",
+      "    {",
+      "        ",
+      "        ${1:l}++;",
+      "    }",
+      "}"
+    ]
   }
 }
