設定の更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "[csharp]": {
     "editor.acceptSuggestionOnCommitCharacter": false,
     "editor.tabSize": 2,
-    "editor.wordBasedSuggestions": false
+    "editor.wordBasedSuggestions": "off"
   },
   "dotnetAcquisitionExtension.enableTelemetry": false,
   "dotnet.codeLens.enableReferencesCodeLens": false
