最新版に更新

--- a/my-library/_my-library.csproj
+++ b/my-library/_my-library.csproj
@@ -10,6 +10,7 @@
     <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
     <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>template</RootNamespace>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
 
   <ItemGroup>
