--- a/my-library/_my-library.csproj
+++ b/my-library/_my-library.csproj
@@ -11,6 +11,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>template</RootNamespace>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <NoWarn>NETSDK1138</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
