--- a/my-library-tests/my-library-tests.csproj
+++ b/my-library-tests/my-library-tests.csproj
@@ -4,8 +4,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <RootNamespace>my_library_tests</RootNamespace>
+    <RootNamespace>MyLibrary.Tests</RootNamespace>
     <TargetFramework>net9.0</TargetFramework>
+
     <!--
     To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
       <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
