カバレッジからテスト自体を除外

--- a/my-library-tests/my-library-tests.csproj
+++ b/my-library-tests/my-library-tests.csproj
@@ -40,6 +40,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\my-library\_my-library.csproj" />
   </ItemGroup>
 
