テストクラスの引数の未使用警告を無効化

--- a/my-library-tests/my-library-tests.csproj
+++ b/my-library-tests/my-library-tests.csproj
@@ -20,7 +20,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <NoWarn>NETSDK1138</NoWarn>
+    <NoWarn>CS9113,NETSDK1138</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
